Green Is Not A Creative Modetab

--- a/zeta-todo/1.20.md
+++ b/zeta-todo/1.20.md
@@ -30,4 +30,6 @@ Item creative tabs used the vanilla api, which is now removed. In the interest o
 * SlimeInABucketItem - MISC
 * Soul Bead - MISC
 * TrowelItem - TOOLS
+* ZetaArrowItem - COMBAT
+* ZetaSignItem - DECORATIONS
 * ZetaMobBucketItem - MISC
