--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -1281,18 +1281,30 @@
 	"block.quark.vertical_azalea_planks": "Vertical Azalea Planks",
 	"block.quark.vertical_blossom_planks": "Vertical Blossom Planks",
 	"block.quark.mangrove_vertical_slab": "Mangrove Vertical Slab",
+	"block.quark.cherry_vertical_slab": "Cherry Vertical Slab",
 	"block.quark.mud_brick_vertical_slab": "Mud Brick Vertical Slab",
 	"block.quark.mangrove_bookshelf": "Mangrove Bookshelf",
+	"block.quark.cherry_bookshelf": "Cherry Bookshelf",
 	"block.quark.mangrove_chest": "Mangrove Chest",
+	"block.quark.cherry_chest": "Cherry Chest",
 	"block.quark.mangrove_trapped_chest": "Mangrove Trapped Chest",
+	"block.quark.cherry_trapped_chest": "Cherry Trapped Chest",
 	"block.quark.lootr_mangrove_chest": "Mangrove Loot Chest",
+	"block.quark.lootr_cherry_chest": "Cherry Loot Chest",
 	"block.quark.lootr_mangrove_trapped_chest": "Mangrove Trapped Loot Chest",
+	"block.quark.lootr_cherry_trapped_chest": "Cherry Trapped Loot Chest",
 	"block.quark.mangrove_hedge": "Mangrove Leaf Hedge",
+	"block.quark.cherry_hedge": "Cherry Leaf Hedge",
 	"block.quark.mangrove_ladder": "Mangrove Ladder",
+	"block.quark.cherry_ladder": "Cherry Ladder",
 	"block.quark.mangrove_leaf_carpet": "Mangrove Leaf Carpet",
+	"block.quark.cherry_leaf_carpet": "Cherry Leaf Carpet",
 	"block.quark.mangrove_post": "Mangrove Post",
+	"block.quark.cherry_post": "Cherry Post",
 	"block.quark.stripped_mangrove_post": "Stripped Mangrove Post",
+	"block.quark.stripped_cherry_post": "Stripped Cherry Post",
 	"block.quark.vertical_mangrove_planks": "Vertical Mangrove Planks",
+	"block.quark.vertical_cherry_planks": "Vertical Cherry Planks",
 	"block.quark.raw_iron_bricks": "Raw Iron Bricks",
 	"block.quark.raw_gold_bricks": "Raw Gold Bricks",
 	"block.quark.raw_copper_bricks": "Raw Copper Bricks",
@@ -1336,6 +1348,7 @@
 	"block.quark.hollow_acacia_log": "Hollow Acacia Log",
 	"block.quark.hollow_dark_oak_log": "Hollow Dark Oak Log",
 	"block.quark.hollow_mangrove_log": "Hollow Mangrove Log",
+	"block.quark.hollow_cherry_log": "Hollow Cherry Log",
 	"block.quark.hollow_crimson_stem": "Hollow Crimson Stem",
 	"block.quark.hollow_warped_stem": "Hollow Warped Stem",
 	"block.quark.hollow_blossom_log": "Hollow Blossom Log",
