Fix up data for wood variants

--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -791,8 +791,6 @@
 	"block.quark.warped_ladder": "Warped Ladder",
 	"block.quark.crimson_ladder": "Crimson Ladder",
 	"block.quark.iron_ladder": "Iron Ladder",
-	"block.quark.bamboo_block": "Block of Bamboo",
-	"block.quark.stripped_bamboo_block": "Block of Stripped Bamboo",
 	"block.quark.cactus_block": "Cactus Batch",
 	"block.quark.chorus_fruit_block": "Chorus Fruit Batch",
 	"block.quark.cocoa_beans_sack": "Cocoa Bean Sack",
@@ -1320,10 +1318,9 @@
 	"block.quark.carved_mud_bricks": "Carved Mud Bricks",
 	"block.quark.mud_brick_lattice": "Mud Brick Lattice",
 	"block.quark.mud_pillar": "Mud Pillar",
-	"block.quark.bamboo_planks": "Bamboo Planks",
-	"block.quark.bamboo_planks_stairs": "Bamboo Stairs",
-	"block.quark.bamboo_planks_slab": "Bamboo Slab",
-	"block.quark.bamboo_planks_vertical_slab": "Bamboo Vertical Slab",
+	"block.quark.cherry_vertical_slab": "Cherry Vertical Slab",
+	"block.quark.bamboo_vertical_slab": "Bamboo Vertical Slab",
+	"block.quark.bamboo_mosaic_vertical_slab": "Bamboo Mosaic Vertical Slab",
 	"block.quark.bamboo_post": "Bamboo Post",
 	"block.quark.stripped_bamboo_post": "Stripped Bamboo Post",
 	"block.quark.bamboo_bookshelf": "Bamboo Bookshelf",
@@ -1332,15 +1329,7 @@
 	"block.quark.lootr_bamboo_chest": "Bamboo Loot Chest",
 	"block.quark.lootr_bamboo_trapped_chest": "Bamboo Trapped Loot Chest",
 	"block.quark.bamboo_ladder": "Bamboo Ladder",
-	"block.quark.bamboo_door": "Bamboo Door",
-	"block.quark.bamboo_trapdoor": "Bamboo Trapdoor",
-	"block.quark.bamboo_fence_gate": "Bamboo Fence Gate",
-	"block.quark.bamboo_fence": "Bamboo Fence",
-	"block.quark.bamboo_sign": "Bamboo Sign",
-	"block.quark.bamboo_button": "Bamboo Button",
-	"block.quark.bamboo_pressure_plate": "Bamboo Pressure Plate",
 	"block.quark.vertical_bamboo_planks": "Vertical Bamboo Planks",
-	"block.quark.bamboo_mosaic": "Bamboo Mosaic",
 	"block.quark.hollow_oak_log": "Hollow Oak Log",
 	"block.quark.hollow_spruce_log": "Hollow Spruce Log",
 	"block.quark.hollow_birch_log": "Hollow Birch Log",
