Blossom and Ancient tree modernizing

--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -179,8 +179,8 @@
 	"quark.jei.hint.pickarang": "It's a Pickaxe Boomerang! Can be thrown and will mine anything it hits and bring you the drops back. It can also be enchanted for better performance.",
 	"quark.jei.hint.flamerang": "Works like a Pickarang, but any items it picks up become immune to fire and lava damage while they travel.",
 	"quark.jei.hint.abacus": "Use this on a block and it'll count the distance between the block you're looking at and the one you clicked, up to 48 blocks.",
-	"quark.jei.hint.ancient_fruit": "Falls from Ancient Trees when they're chopped down. Gives you a small amount of XP when eaten.",
-	"quark.jei.hint.ancient_sapling": "Can be found in Ancient City chests.",
+	"quark.jei.hint.ancient_fruit": "Falls from Ashen Trees when they're chopped down. Gives you a small amount of XP when eaten.",
+	"quark.jei.hint.ancient_sapling": "Can be sometimes sniffed by a Sniffer.",
 	"quark.jei.hint.backpack": "Wear this to gain an additional three rows of inventory space.",
 	"quark.jei.hint.blackstone_furnace": "If the block under this furnace produces Soul Fire when lit, the furnace will too.",
 	"quark.jei.hint.blaze_lantern": "Burns forever just like Netherrack.",
@@ -540,9 +540,9 @@
 	"item.quark.soul_bead": "Soul Bead",
 	"item.quark.abacus": "Abacus",
 	"item.quark.azalea_boat": "Azalea Boat",
-	"item.quark.blossom_boat": "Blossom Boat",
+	"item.quark.blossom_boat": "Trumpet Boat",
 	"item.quark.azalea_chest_boat": "Azalea Boat with Chest",
-	"item.quark.blossom_chest_boat": "Blossom Boat with Chest",
+	"item.quark.blossom_chest_boat": "Trumpet Boat with Chest",
 	"item.quark.egg_parrot_red_blue": "Red Parrot Egg",
 	"item.quark.egg_parrot_blue": "Blue Parrot Egg",
 	"item.quark.egg_parrot_green": "Green Parrot Egg",
@@ -567,9 +567,9 @@
 	"item.quark.music_disc_chatter": "Ambience Disc",
 	"item.quark.music_disc_chatter.desc": "Packed Venue",
 	"item.quark.torch_arrow": "Torch Arrow",
-	"item.quark.ancient_boat": "Ancient Boat",
-	"item.quark.ancient_chest_boat": "Ancient Boat with Chest",
-	"item.quark.ancient_fruit": "Ancient Fruit",
+	"item.quark.ancient_boat": "Ashen Boat",
+	"item.quark.ancient_chest_boat": "Ashen Boat with Chest",
+	"item.quark.ancient_fruit": "Enchanted Fruit",
 	"item.quark.pathfinders_quill": "Pathfinder's Quill",
 	"item.quark.hammer": "Hammer",
 
@@ -998,24 +998,24 @@
 	"block.quark.shale_pillar": "Polished Shale Pillar",
 	"block.quark.monster_box": "Monster Box",
 	"block.quark.iron_chain": "Iron Chain",
-	"block.quark.blue_blossom_leaves": "Frosty Blossom Leaves",
-	"block.quark.blue_blossom_sapling": "Frosty Blossom Sapling",
-	"block.quark.lavender_blossom_leaves": "Serene Blossom Leaves",
-	"block.quark.lavender_blossom_sapling": "Serene Blossom Sapling",
-	"block.quark.orange_blossom_leaves": "Warm Blossom Leaves",
-	"block.quark.orange_blossom_sapling": "Warm Blossom Sapling",
-	"block.quark.pink_blossom_leaves": "Sweet Blossom Leaves",
-	"block.quark.pink_blossom_sapling": "Sweet Blossom Sapling",
-	"block.quark.yellow_blossom_leaves": "Sunny Blossom Leaves",
-	"block.quark.yellow_blossom_sapling": "Sunny Blossom Sapling",
-	"block.quark.red_blossom_leaves": "Fiery Blossom Leaves",
-	"block.quark.red_blossom_sapling": "Fiery Blossom Sapling",
-	"block.quark.yellow_blossom_leaf_carpet": "Sunny Blossom Leaf Carpet",
-	"block.quark.pink_blossom_leaf_carpet": "Sweet Blossom Leaf Carpet",
-	"block.quark.orange_blossom_leaf_carpet": "Warm Blossom Leaf Carpet",
-	"block.quark.lavender_blossom_leaf_carpet": "Serene Blossom Leaf Carpet",
-	"block.quark.blue_blossom_leaf_carpet": "Frosty Blossom Leaf Carpet",
-	"block.quark.red_blossom_leaf_carpet": "Fiery Blossom Leaf Carpet",
+	"block.quark.blue_blossom_leaves": "Frosty Trumpet Leaves",
+	"block.quark.blue_blossom_sapling": "Frosty Trumpet Sapling",
+	"block.quark.lavender_blossom_leaves": "Serene Trumpet Leaves",
+	"block.quark.lavender_blossom_sapling": "Serene Trumpet Sapling",
+	"block.quark.orange_blossom_leaves": "Warm Trumpet Leaves",
+	"block.quark.orange_blossom_sapling": "Warm Trumpet Sapling",
+	"block.quark.pink_blossom_leaves": "Sweet Trumpet Leaves",
+	"block.quark.pink_blossom_sapling": "Sweet Trumpet Sapling",
+	"block.quark.yellow_blossom_leaves": "Sunny Trumpet Leaves",
+	"block.quark.yellow_blossom_sapling": "Sunny Trumpet Sapling",
+	"block.quark.red_blossom_leaves": "Fiery Trumpet Leaves",
+	"block.quark.red_blossom_sapling": "Fiery Trumpet Sapling",
+	"block.quark.yellow_blossom_leaf_carpet": "Sunny Trumpet Leaf Carpet",
+	"block.quark.pink_blossom_leaf_carpet": "Sweet Trumpet Leaf Carpet",
+	"block.quark.orange_blossom_leaf_carpet": "Warm Trumpet Leaf Carpet",
+	"block.quark.lavender_blossom_leaf_carpet": "Serene Trumpet Leaf Carpet",
+	"block.quark.blue_blossom_leaf_carpet": "Frosty Trumpet Leaf Carpet",
+	"block.quark.red_blossom_leaf_carpet": "Fiery Trumpet Leaf Carpet",
 	"block.quark.bonded_leather": "Bonded Leather",
 	"block.quark.iron_plate": "Iron Plate",
 	"block.quark.rusty_iron_plate": "Rusty Iron Plate",
@@ -1146,12 +1146,12 @@
 	"block.quark.dark_oak_hedge": "Dark Oak Leaf Hedge",
 	"block.quark.azalea_hedge": "Azalea Leaf Hedge",
 	"block.quark.flowering_azalea_hedge": "Flowering Azalea Leaf Hedge",
-	"block.quark.blue_blossom_hedge": "Frosty Blossom Leaf Hedge",
-	"block.quark.lavender_blossom_hedge": "Serene Blossom Leaf Hedge",
-	"block.quark.orange_blossom_hedge": "Warm Blossom Leaf Hedge",
-	"block.quark.pink_blossom_hedge": "Sweet Blossom Leaf Hedge",
-	"block.quark.yellow_blossom_hedge": "Sunny Blossom Leaf Hedge",
-	"block.quark.red_blossom_hedge": "Fiery Blossom Leaf Hedge",
+	"block.quark.blue_blossom_hedge": "Frosty Trumpet Leaf Hedge",
+	"block.quark.lavender_blossom_hedge": "Serene Trumpet Leaf Hedge",
+	"block.quark.orange_blossom_hedge": "Warm Trumpet Leaf Hedge",
+	"block.quark.pink_blossom_hedge": "Sweet Trumpet Leaf Hedge",
+	"block.quark.yellow_blossom_hedge": "Sunny Trumpet Leaf Hedge",
+	"block.quark.red_blossom_hedge": "Fiery Trumpet Leaf Hedge",
 	"block.quark.matrix_enchanter": "Matrix Enchanting Table",
 	"block.quark.crate": "Storage Crate",
 	"block.quark.blackstone_bricks": "Blackstone Bricks",
@@ -1242,30 +1242,30 @@
 	"block.quark.azalea_trapdoor": "Azalea Trapdoor",
 	"block.quark.azalea_fence_gate": "Azalea Fence Gate",
 	"block.quark.azalea_fence": "Azalea Fence",
-	"block.quark.blossom_planks": "Blossom Planks",
-	"block.quark.blossom_log": "Blossom Log",
-	"block.quark.stripped_blossom_log": "Stripped Blossom Log",
-	"block.quark.blossom_wood": "Blossom Wood",
-	"block.quark.stripped_blossom_wood": "Stripped Blossom Wood",
-	"block.quark.blossom_planks_stairs": "Blossom Stairs",
-	"block.quark.blossom_planks_slab": "Blossom Slab",
-	"block.quark.blossom_planks_vertical_slab": "Blossom Vertical Slab",
-	"block.quark.blossom_post": "Blossom Post",
-	"block.quark.stripped_blossom_post": "Stripped Blossom Post",
-	"block.quark.blossom_bookshelf": "Blossom Bookshelf",
-	"block.quark.blossom_chest": "Blossom Chest",
-	"block.quark.blossom_trapped_chest": "Blossom Trapped Chest",
-	"block.quark.lootr_blossom_chest": "Blossom Loot Chest",
-	"block.quark.lootr_blossom_trapped_chest": "Blossom Trapped Loot Chest",
-	"block.quark.blossom_ladder": "Blossom Ladder",
-	"block.quark.blossom_door": "Blossom Door",
-	"block.quark.blossom_trapdoor": "Blossom Trapdoor",
-	"block.quark.blossom_fence_gate": "Blossom Fence Gate",
-	"block.quark.blossom_fence": "Blossom Fence",
-	"block.quark.blossom_sign": "Blossom Sign",
+	"block.quark.blossom_planks": "Trumpet Planks",
+	"block.quark.blossom_log": "Trumpet Log",
+	"block.quark.stripped_blossom_log": "Stripped Trumpet Log",
+	"block.quark.blossom_wood": "Trumpet Wood",
+	"block.quark.stripped_blossom_wood": "Stripped Trumpet Wood",
+	"block.quark.blossom_planks_stairs": "Trumpet Stairs",
+	"block.quark.blossom_planks_slab": "Trumpet Slab",
+	"block.quark.blossom_planks_vertical_slab": "Trumpet Vertical Slab",
+	"block.quark.blossom_post": "Trumpet Post",
+	"block.quark.stripped_blossom_post": "Stripped Trumpet Post",
+	"block.quark.blossom_bookshelf": "Trumpet Bookshelf",
+	"block.quark.blossom_chest": "Trumpet Chest",
+	"block.quark.blossom_trapped_chest": "Trumpet Trapped Chest",
+	"block.quark.lootr_blossom_chest": "Trumpet Loot Chest",
+	"block.quark.lootr_blossom_trapped_chest": "Trumpet Trapped Loot Chest",
+	"block.quark.blossom_ladder": "Trumpet Ladder",
+	"block.quark.blossom_door": "Trumpet Door",
+	"block.quark.blossom_trapdoor": "Trumpet Trapdoor",
+	"block.quark.blossom_fence_gate": "Trumpet Fence Gate",
+	"block.quark.blossom_fence": "Trumpet Fence",
+	"block.quark.blossom_sign": "Trumpet Sign",
 	"block.quark.azalea_sign": "Azalea Sign",
-	"block.quark.blossom_button": "Blossom Button",
-	"block.quark.blossom_pressure_plate": "Blossom Pressure Plate",
+	"block.quark.blossom_button": "Trumpet Button",
+	"block.quark.blossom_pressure_plate": "Trumpet Pressure Plate",
 	"block.quark.azalea_button": "Azalea Button",
 	"block.quark.azalea_pressure_plate": "Azalea Pressure Plate",
 	"block.quark.vertical_oak_planks": "Vertical Oak Planks",
@@ -1277,7 +1277,7 @@
 	"block.quark.vertical_warped_planks": "Vertical Warped Planks",
 	"block.quark.vertical_crimson_planks": "Vertical Crimson Planks",
 	"block.quark.vertical_azalea_planks": "Vertical Azalea Planks",
-	"block.quark.vertical_blossom_planks": "Vertical Blossom Planks",
+	"block.quark.vertical_blossom_planks": "Vertical Trumpet Planks",
 	"block.quark.mangrove_vertical_slab": "Mangrove Vertical Slab",
 	"block.quark.cherry_vertical_slab": "Cherry Vertical Slab",
 	"block.quark.mud_brick_vertical_slab": "Mud Brick Vertical Slab",
@@ -1340,37 +1340,37 @@
 	"block.quark.hollow_cherry_log": "Hollow Cherry Log",
 	"block.quark.hollow_crimson_stem": "Hollow Crimson Stem",
 	"block.quark.hollow_warped_stem": "Hollow Warped Stem",
-	"block.quark.hollow_blossom_log": "Hollow Blossom Log",
+	"block.quark.hollow_blossom_log": "Hollow Trumpet Log",
 	"block.quark.hollow_azalea_log": "Hollow Azalea Log",
-	"block.quark.ancient_planks": "Ancient Planks",
-	"block.quark.ancient_log": "Ancient Log",
-	"block.quark.stripped_ancient_log": "Stripped Ancient Log",
-	"block.quark.ancient_wood": "Ancient Wood",
-	"block.quark.stripped_ancient_wood": "Stripped Ancient Wood",
-	"block.quark.hollow_ancient_log": "Hollow Ancient Log",
-	"block.quark.ancient_planks_stairs": "Ancient Stairs",
-	"block.quark.ancient_planks_slab": "Ancient Slab",
-	"block.quark.ancient_planks_vertical_slab": "Ancient Vertical Slab",
-	"block.quark.ancient_post": "Ancient Post",
-	"block.quark.stripped_ancient_post": "Stripped Ancient Post",
-	"block.quark.ancient_bookshelf": "Ancient Bookshelf",
-	"block.quark.ancient_chest": "Ancient Chest",
-	"block.quark.ancient_trapped_chest": "Ancient Trapped Chest",
-	"block.quark.lootr_ancient_chest": "Ancient Loot Chest",
-	"block.quark.lootr_ancient_trapped_chest": "Ancient Trapped Loot Chest",
-	"block.quark.ancient_ladder": "Ancient Ladder",
-	"block.quark.ancient_door": "Ancient Door",
-	"block.quark.ancient_trapdoor": "Ancient Trapdoor",
-	"block.quark.ancient_fence_gate": "Ancient Fence Gate",
-	"block.quark.ancient_fence": "Ancient Fence",
-	"block.quark.ancient_sign": "Ancient Sign",
-	"block.quark.ancient_button": "Ancient Button",
-	"block.quark.ancient_pressure_plate": "Ancient Pressure Plate",
-	"block.quark.vertical_ancient_planks": "Vertical Ancient Planks",
-	"block.quark.ancient_leaves": "Ancient Leaves",
-	"block.quark.ancient_sapling": "Ancient Sapling",
-	"block.quark.ancient_leaf_carpet": "Ancient Leaf Carpet",
-	"block.quark.ancient_hedge": "Ancient Leaf Hedge",
+	"block.quark.ancient_planks": "Ashen Planks",
+	"block.quark.ancient_log": "Ashen Log",
+	"block.quark.stripped_ancient_log": "Stripped Ashen Log",
+	"block.quark.ancient_wood": "Ashen Wood",
+	"block.quark.stripped_ancient_wood": "Stripped Ashen Wood",
+	"block.quark.hollow_ancient_log": "Hollow Ashen Log",
+	"block.quark.ancient_planks_stairs": "Ashen Stairs",
+	"block.quark.ancient_planks_slab": "Ashen Slab",
+	"block.quark.ancient_planks_vertical_slab": "Ashen Vertical Slab",
+	"block.quark.ancient_post": "Ashen Post",
+	"block.quark.stripped_ancient_post": "Stripped Ashen Post",
+	"block.quark.ancient_bookshelf": "Ashen Bookshelf",
+	"block.quark.ancient_chest": "Ashen Chest",
+	"block.quark.ancient_trapped_chest": "Ashen Trapped Chest",
+	"block.quark.lootr_ancient_chest": "Ashen Loot Chest",
+	"block.quark.lootr_ancient_trapped_chest": "Ashen Trapped Loot Chest",
+	"block.quark.ancient_ladder": "Ashen Ladder",
+	"block.quark.ancient_door": "Ashen Door",
+	"block.quark.ancient_trapdoor": "Ashen Trapdoor",
+	"block.quark.ancient_fence_gate": "Ashen Fence Gate",
+	"block.quark.ancient_fence": "Ashen Fence",
+	"block.quark.ancient_sign": "Ashen Sign",
+	"block.quark.ancient_button": "Ashen Button",
+	"block.quark.ancient_pressure_plate": "Ashen Pressure Plate",
+	"block.quark.vertical_ancient_planks": "Vertical Ashen Planks",
+	"block.quark.ancient_leaves": "Ashen Leaves",
+	"block.quark.ancient_sapling": "Ashen Sapling",
+	"block.quark.ancient_leaf_carpet": "Ashen Leaf Carpet",
+	"block.quark.ancient_hedge": "Ashen Leaf Hedge",
 	"block.quark.golden_carrot_crate": "Golden Carrot Crate",
 
 	"item.quark.stoneling_spawn_egg": "Stoneling Spawn Egg",
@@ -1402,23 +1402,23 @@
 	"block.quark.magnetized_block": "Magnetized Block",
 	"block.quark.potted_beetroot": "Potted Beetroots",
 	"block.quark.potted_berries": "Potted Sweet Berry Bush",
-	"block.quark.potted_blue_blossom_sapling": "Potted Frosty Blossom Sapling",
+	"block.quark.potted_blue_blossom_sapling": "Potted Frosty Trumpet Sapling",
 	"block.quark.potted_carrot": "Potted Carrots",
 	"block.quark.potted_chorus": "Potted Chorus Tree",
 	"block.quark.potted_cocoa_bean": "Potted Cocoa",
 	"block.quark.potted_grass": "Potted Grass",
 	"block.quark.potted_large_fern": "Potted Large Fern",
-	"block.quark.potted_lavender_blossom_sapling": "Potted Serene Blossom Sapling",
+	"block.quark.potted_lavender_blossom_sapling": "Potted Serene Trumpet Sapling",
 	"block.quark.potted_lilac": "Potted Lilac",
 	"block.quark.potted_melon": "Potted Melon",
 	"block.quark.potted_nether_sprouts": "Potted Nether Sprouts",
 	"block.quark.potted_nether_wart": "Potted Nether Wart",
-	"block.quark.potted_orange_blossom_sapling": "Potted Warm Blossom Sapling",
+	"block.quark.potted_orange_blossom_sapling": "Potted Warm Trumpet Sapling",
 	"block.quark.potted_peony": "Potted Peony",
-	"block.quark.potted_pink_blossom_sapling": "Potted Sweet Blossom Sapling",
+	"block.quark.potted_pink_blossom_sapling": "Potted Sweet Trumpet Sapling",
 	"block.quark.potted_potato": "Potted Potatoes",
 	"block.quark.potted_pumpkin": "Potted Pumpkin",
-	"block.quark.potted_red_blossom_sapling": "Potted Fiery Blossom Sapling",
+	"block.quark.potted_red_blossom_sapling": "Potted Fiery Trumpet Sapling",
 	"block.quark.potted_rose": "Potted Rose",
 	"block.quark.potted_sea_pickle": "Potted Sea Pickle",
 	"block.quark.potted_sugar_cane": "Potted Sugar Cane",
@@ -1428,12 +1428,12 @@
 	"block.quark.potted_vine": "Potted Vines",
 	"block.quark.potted_weeping_vines": "Potted Weeping Vines",
 	"block.quark.potted_wheat": "Potted Wheat",
-	"block.quark.potted_yellow_blossom_sapling": "Potted Sunny Blossom Sapling",
+	"block.quark.potted_yellow_blossom_sapling": "Potted Sunny Trumpet Sapling",
 	"block.quark.potted_glow_lichen_growth": "Potted Glow Lichen",
 	"block.quark.potted_glow_shroom": "Potted Glow Shroom",
 	"block.quark.potted_chorus_weeds": "Potted Chorus Weeds",
 	"block.quark.potted_chorus_twist": "Potted Chorus Twist",
-	"block.quark.potted_ancient_sapling": "Potted Ancient Sapling",
+	"block.quark.potted_ancient_sapling": "Potted Ashen Sapling",
 	"block.quark.potted_cave_vines": "Potted Cave Vines",
 
 	"block.quark.tiny_potato": "Tiny Potato",
@@ -1462,11 +1462,11 @@
 	"tag.item.c.storage_blocks.sugar_cane": "Sugar Cane Storage Blocks",
 	"tag.item.c.storage_blocks.sweet_berries": "Sweet Berry Storage Blocks",
 
-	"tag.item.quark.ancient_logs": "Ancient Logs",
+	"tag.item.quark.ancient_logs": "Ashen Logs",
 	"tag.item.quark.azalea_logs": "Azalea Logs",
 	"tag.item.quark.bamboo_logs": "Bamboo Logs",
 	"tag.item.quark.big_harvesting_hoes": "Wide-Harvesting Hoes",
-	"tag.item.quark.blossom_logs": "Blossom Logs",
+	"tag.item.quark.blossom_logs": "Trumpet Logs",
 	"tag.item.quark.corundum": "Corundum",
 	"tag.item.quark.crab_tempt_items": "Crab Food",
 	"tag.item.quark.crystal_lamp": "Crystal Lamps",
@@ -1534,9 +1534,9 @@
 	"advancements.quark.get_own_head.title": "Getting Ahead",
 	"advancements.quark.get_own_head.description": "Get your own player head from a named Snow Golem killed by a Witch",
 	"advancements.quark.ancient_apple_overlevel.title": "Bit Fruity",
-	"advancements.quark.ancient_apple_overlevel.description": "Eat an Ancient Apple with over 100 levels on you",
+	"advancements.quark.ancient_apple_overlevel.description": "Eat an Enchanted Fruit with over 100 levels on you",
 	"advancements.quark.get_all_blossom_saplings.title": "Blossoming",
-	"advancements.quark.get_all_blossom_saplings.description": "Get every Blossom Sapling",
+	"advancements.quark.get_all_blossom_saplings.description": "Get every Trumpet Sapling",
 	"advancements.quark.get_all_corundum.title": "Corundum Conundrum",
 	"advancements.quark.get_all_corundum.description": "Get every color of Corundum Cluster",
 	"advancements.quark.use_viaduct.title": "Chase Me",
