--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -1372,6 +1372,9 @@
 	"block.quark.ancient_leaf_carpet": "Ashen Leaf Carpet",
 	"block.quark.ancient_hedge": "Ashen Leaf Hedge",
 	"block.quark.golden_carrot_crate": "Golden Carrot Crate",
+	"block.quark.blossom_hanging_sign": "Trumpet Hanging Sign",
+	"block.quark.azalea_hanging_sign": "Azalea Hanging Sign",
+	"block.quark.ancient_hanging_sign": "Ashen Hanging Sign",
 
 	"item.quark.stoneling_spawn_egg": "Stoneling Spawn Egg",
 	"item.quark.crab_spawn_egg": "Crab Spawn Egg",
