--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -596,7 +596,7 @@
 	"item.quark.biome_map.mushroom_fields": "Mushroom Fields Pathfinder Map",
 	"item.quark.biome_map.ice_spikes": "Ice Spikes Pathfinder Map",
 
-	"block.quark.charcoal_block": "Charcoal Block",
+	"block.quark.charcoal_block": "Block of Charcoal",
 	"block.quark.thatch": "Thatch",
 	"block.quark.thatch_slab": "Thatch Slab",
 	"block.quark.thatch_stairs": "Thatch Stairs",
