Fix shiba's trying to pickup infinity arrows (#4469) and make them eat arrows

--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -332,6 +332,7 @@
 	"quark.readout.sign_says": ". Sign Says ",
 	"quark.readout.no_item": "No item",
 
+	"quark.subtitles.shiba_eat_arrow": "Shiba… eats arrow?",
 	"quark.subtitles.meep": "Stoneling runs away",
 	"quark.subtitles.give_stoneling": "Stoneling gives item",
 	"quark.subtitles.take_stoneling": "Stoneling takes item",
