--- a/changelog.txt
+++ b/changelog.txt
@@ -2,46 +2,46 @@ Alpha changelog for build 421
 
 # Fixes
 
-- Fix more cases of blocks not having their correct mining tool.
-- Fix more cases of blocks being missing from creative tabs (and therefore JEI).
-- Simplify SimpleHarvestModule code, fixing a crash with Farmer's Delight.
-- Fix our LivingDeath and ItemTooltip events not firing (had various effects).
-- Fix missing Hotbar Changer texture.
-- Fix Fence Gates not opening with double-door opening.
-- Fix Shibas getting stuck trying to pick up arrows fired from an Infinity bow (...!)
-- Fix stonelings getting damaged by projectiles.
-- Fix pickarang damage sources.
-- Fix the Q button being misplaced, and the "q button on right" option making it more misplaced.
-- Fix Forgotten Hat having 2 identical reach indicators (one for each Forge reach attribute).
-- Fix Crate not having the chest interaction buttons.
-- Fix the Backpack screen not having the sort button.
-- Fix inability to put 1.20 seeds in the Seed Pouch.
-- Fix Tiny Potato being equippable in any slot. Too OP.
-- Fix Backpack and Forgotten Hat not being equippable with right mouse.
-- Fix Corundum Lamps not being mineable.
-- Fix Matrix Enchanting generating pieces you can't actually apply to the tool you're enchanting.
-- Fix Multishot crossbows duplicating torch arrows.
-- Fix sideways Stripped Cherry Posts having the Stripped Bamboo Post model due to a copy-paste error.
-- Fix the Feeding Trough not attracting Brain system mobs, like the Sniffer, Goat, Frog etc.
-- Try to fix Permafrost replacing blocks other than overworld stones.
-- Fix Rune colors not being applied to armor worn on your player/an armor stand.
-- Fix "Gold Tools Have Fortune" not making gold tools have fortune.
-- Fix potion attributes not appearing on items.
-- Fix double-clicking in a chest clearing the search bar.
-- Fix pickarangs being able to break reinforced deepslate.
-- Fix holding a bow in creative glitching out the Usage Ticker.
-- Fix map tooltips not rendering
-- Fix stronghold libraries having too many ancient tomes
-- Fix dropped backpack with items spilled out still showing the lock icon
+- Fixed "Gold Tools Have Fortune" not making gold tools have fortune.
+- Fixed Backpack and Forgotten Hat not being equippable with right mouse button.
+- Fixed Corundum Lamps not being mineable.
+- Fixed Crate not having the chest interaction buttons.
+- Fixed double-clicking anywhere in a chest screen clearing the search bar.
+- Fixed dropped backpack with items spilled out still showing the lock icon.
+- Fixed Forgotten Hat having 2 identical reach indicators (one for each Forge reach attribute).
+- Fixed holding a bow in creative glitching out the Usage Ticker.
+- Fixed inability to put 1.20 seeds in the Seed Pouch.
+- Fixed Map tooltips not rendering.
+- Fixed Matrix Enchanting generating pieces you can't actually apply to the tool you're enchanting.
+- Fixed missing Hotbar Changer texture.
+- Fixed more cases of blocks being missing from creative tabs (and therefore JEI).
+- Fixed more cases of blocks not having their correct mining tool.
+- Fixed Multishot crossbows duplicating torch arrows.
+- Fixed our LivingDeath and ItemTooltip events not firing (had various effects).
+- Fixed pickarang damage sources.
+- Fixed pickarangs being able to break reinforced deepslate.
+- Fixed potion attributes not appearing on items.
+- Fixed Rune colors not being applied to armor worn on your player/an armor stand.
+- Fixed Shibas getting stuck trying to pick up arrows fired from an Infinity bow (...!)
+- Fixed sideways Stripped Cherry Posts having the Stripped Bamboo Post model due to a copy-paste error.
+- Fixed stacked Fence Gates not opening in tandem.
+- Fixed stonelings getting damaged by projectiles.
+- Fixed stronghold libraries having too many ancient tomes.
+- Fixed the Backpack screen not having the sort button.
+- Fixed the Feeding Trough not attracting Brain system mobs, like the Sniffer, Goat, Frog etc.
+- Fixed the q button being misplaced, and the "q button on right" option making it more misplaced.
+- Fixed Tiny Potato being equippable in any slot. Too OP.
+- Simplified SimpleHarvestModule code, fixing a crash with Farmer's Delight.
+- Tried to fix Permafrost replacing blocks other than overworld stones.
 
 ## Performance
 
-- Try to fix Permafrost worldgen performance. It's still slow.
+- Tried to fix Permafrost worldgen performance. It'll generate in smaller blobs now too. It's still slow.
 
 ## New
 
-- Dispensers can now shoot torch arrows.
-- Tuff blocks now have 1.21 textures (one was left out on purpose to maintain consistency)
-- Right clicking an armor stand with both hands empty while wearing a backpack moves the backpack to the armor stand (even if there's items inside)
-- Potted Pitcher Plant
-- Chute can now drop items through Hollow Logs
+- Chute can now drop items through Hollow Logs.
+- Dispensers can now shoot Torch Arrows.
+- Pitcher Plants can now be placed in Flower Pots.
+- Right clicking an Armor Stand with both hands empty while wearing a Backpack moves the Backpack to the Armor Stand. (even if there's items inside)
+- Tuff blocks now have 1.21 textures. (one was left out on purpose to maintain consistency)
