--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -455,6 +455,7 @@
 	"quark.misc.quill_searching": "Searching",
 	"quark.misc.variant_tooltip_hold_shift": "(SHIFT for Variants)",
 	"quark.misc.variant_tooltip_header": "Variants:",
+	"quark.misc.disable_slot": "Click to Disable Slot",
 
 	"quark.misc.you_came_to_the_wrong_neighborhood.0": "Six letter word just to get me along",
 	"quark.misc.you_came_to_the_wrong_neighborhood.1": "It's a intricacy and I'm coding on my mod and I,",
@@ -1382,6 +1383,7 @@
 	"block.quark.blossom_hanging_sign": "Trumpet Hanging Sign",
 	"block.quark.azalea_hanging_sign": "Azalea Hanging Sign",
 	"block.quark.ancient_hanging_sign": "Ashen Hanging Sign",
+	"block.quark.crafter": "Crafter",
 
 	"item.quark.stoneling_spawn_egg": "Stoneling Spawn Egg",
 	"item.quark.crab_spawn_egg": "Crab Spawn Egg",
