--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -237,7 +237,7 @@
 	"quark.jei.hint.rotating_bundles": "Scrolling while hovering over a bundle will rotate the items inside.",
 	"quark.jei.hint.crab_info": "Crabs can be found in Beaches, and bred with Wheat, Chicken, or any type of Fish.",
 	"quark.jei.hint.ambience_discs": "Ambience Discs can be gotten when a Skeleton kills a Spider. Unlike Music Discs, these loop infinitely.",
-	"quark.jei.hint.smithing_templaterune": "Combine in a Smithing Table with an enchanted item to change its shine color. This is purely visual.",
+	"quark.jei.hint.smithing_template_rune": "Combine in a Smithing Table with an enchanted item to change its shine color. This is purely visual.",
 	"quark.jei.hint.parrot_eggs": "Throw to create a baby parrot. Feed a parrot many Beetroot Seeds until it loves you, and then it'll lay one after 10 minutes.",
 	"quark.jei.hint.doors_open_together": "When creating a double door, they'll open/close together.",
 	"quark.jei.hint.fence_gates_open_together": "When another fence gate is placed above or below it, they'll open/close together.",
