--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -958,55 +958,55 @@
 	"block.quark.soul_sandstone_bricks_wall": "Soul Sandstone Brick Wall",
 	"block.quark.red_sandstone_bricks_wall": "Red Sandstone Brick Wall",
 	"block.quark.sandstone_bricks_wall": "Sandstone Brick Wall",
-	"block.quark.andesite_bricks": "Polished Andesite Bricks",
-	"block.quark.granite_bricks": "Polished Granite Bricks",
-	"block.quark.diorite_bricks": "Polished Diorite Bricks",
-	"block.quark.calcite_bricks": "Polished Calcite Bricks",
-	"block.quark.limestone_bricks": "Polished Limestone Bricks",
-	"block.quark.jasper_bricks": "Polished Jasper Bricks",
-	"block.quark.shale_bricks": "Polished Shale Bricks",
-	"block.quark.chiseled_andesite_bricks": "Chiseled Polished Andesite Bricks",
-	"block.quark.chiseled_granite_bricks": "Chiseled Polished Granite Bricks",
-	"block.quark.chiseled_diorite_bricks": "Chiseled Polished Diorite Bricks",
-	"block.quark.chiseled_calcite_bricks": "Chiseled Polished Calcite Bricks",
-	"block.quark.chiseled_limestone_bricks": "Chiseled Polished Limestone Bricks",
-	"block.quark.chiseled_jasper_bricks": "Chiseled Polished Jasper Bricks",
-	"block.quark.chiseled_shale_bricks": "Chiseled Polished Shale Bricks",
-	"block.quark.andesite_bricks_stairs": "Polished Andesite Brick Stairs",
-	"block.quark.granite_bricks_stairs": "Polished Granite Brick Stairs",
-	"block.quark.diorite_bricks_stairs": "Polished Diorite Brick Stairs",
-	"block.quark.calcite_bricks_stairs": "Polished Calcite Brick Stairs",
-	"block.quark.limestone_bricks_stairs": "Polished Limestone Brick Stairs",
-	"block.quark.jasper_bricks_stairs": "Polished Jasper Brick Stairs",
-	"block.quark.shale_bricks_stairs": "Polished Shale Brick Stairs",
-	"block.quark.andesite_bricks_slab": "Polished Andesite Brick Slab",
-	"block.quark.granite_bricks_slab": "Polished Granite Brick Slab",
-	"block.quark.diorite_bricks_slab": "Polished Diorite Brick Slab",
-	"block.quark.calcite_bricks_slab": "Polished Calcite Brick Slab",
-	"block.quark.limestone_bricks_slab": "Polished Limestone Brick Slab",
-	"block.quark.jasper_bricks_slab": "Polished Jasper Brick Slab",
-	"block.quark.shale_bricks_slab": "Polished Shale Brick Slab",
-	"block.quark.andesite_bricks_vertical_slab": "Polished Andesite Brick Vertical Slab",
-	"block.quark.granite_bricks_vertical_slab": "Polished Granite Brick Vertical Slab",
-	"block.quark.diorite_bricks_vertical_slab": "Polished Diorite Brick Vertical Slab",
-	"block.quark.calcite_bricks_vertical_slab": "Polished Calcite Brick Vertical Slab",
-	"block.quark.limestone_bricks_vertical_slab": "Polished Limestone Brick Vertical Slab",
-	"block.quark.jasper_bricks_vertical_slab": "Polished Jasper Brick Vertical Slab",
-	"block.quark.shale_bricks_vertical_slab": "Polished Shale Brick Vertical Slab",
-	"block.quark.andesite_bricks_wall": "Polished Andesite Brick Wall",
-	"block.quark.granite_bricks_wall": "Polished Granite Brick Wall",
-	"block.quark.diorite_bricks_wall": "Polished Diorite Brick Wall",
-	"block.quark.calcite_bricks_wall": "Polished Calcite Brick Wall",
-	"block.quark.limestone_bricks_wall": "Polished Limestone Brick Wall",
-	"block.quark.jasper_bricks_wall": "Polished Jasper Brick Wall",
-	"block.quark.shale_bricks_wall": "Polished Shale Brick Wall",
-	"block.quark.andesite_pillar": "Polished Andesite Pillar",
-	"block.quark.granite_pillar": "Polished Granite Pillar",
-	"block.quark.diorite_pillar": "Polished Diorite Pillar",
-	"block.quark.calcite_pillar": "Polished Calcite Pillar",
-	"block.quark.limestone_pillar": "Polished Limestone Pillar",
-	"block.quark.jasper_pillar": "Polished Jasper Pillar",
-	"block.quark.shale_pillar": "Polished Shale Pillar",
+	"block.quark.andesite_bricks": "Andesite Bricks",
+	"block.quark.granite_bricks": "Granite Bricks",
+	"block.quark.diorite_bricks": "Diorite Bricks",
+	"block.quark.calcite_bricks": "Calcite Bricks",
+	"block.quark.limestone_bricks": "Limestone Bricks",
+	"block.quark.jasper_bricks": "Jasper Bricks",
+	"block.quark.shale_bricks": "Shale Bricks",
+	"block.quark.chiseled_andesite_bricks": "Chiseled Andesite Bricks",
+	"block.quark.chiseled_granite_bricks": "Chiseled Granite Bricks",
+	"block.quark.chiseled_diorite_bricks": "Chiseled Diorite Bricks",
+	"block.quark.chiseled_calcite_bricks": "Chiseled Calcite Bricks",
+	"block.quark.chiseled_limestone_bricks": "Chiseled Limestone Bricks",
+	"block.quark.chiseled_jasper_bricks": "Chiseled Jasper Bricks",
+	"block.quark.chiseled_shale_bricks": "Chiseled Shale Bricks",
+	"block.quark.andesite_bricks_stairs": "Andesite Brick Stairs",
+	"block.quark.granite_bricks_stairs": "Granite Brick Stairs",
+	"block.quark.diorite_bricks_stairs": "Diorite Brick Stairs",
+	"block.quark.calcite_bricks_stairs": "Calcite Brick Stairs",
+	"block.quark.limestone_bricks_stairs": "Limestone Brick Stairs",
+	"block.quark.jasper_bricks_stairs": "Jasper Brick Stairs",
+	"block.quark.shale_bricks_stairs": "Shale Brick Stairs",
+	"block.quark.andesite_bricks_slab": "Andesite Brick Slab",
+	"block.quark.granite_bricks_slab": "Granite Brick Slab",
+	"block.quark.diorite_bricks_slab": "Diorite Brick Slab",
+	"block.quark.calcite_bricks_slab": "Calcite Brick Slab",
+	"block.quark.limestone_bricks_slab": "Limestone Brick Slab",
+	"block.quark.jasper_bricks_slab": "Jasper Brick Slab",
+	"block.quark.shale_bricks_slab": "Shale Brick Slab",
+	"block.quark.andesite_bricks_vertical_slab": "Andesite Brick Vertical Slab",
+	"block.quark.granite_bricks_vertical_slab": "Granite Brick Vertical Slab",
+	"block.quark.diorite_bricks_vertical_slab": "Diorite Brick Vertical Slab",
+	"block.quark.calcite_bricks_vertical_slab": "Calcite Brick Vertical Slab",
+	"block.quark.limestone_bricks_vertical_slab": "Limestone Brick Vertical Slab",
+	"block.quark.jasper_bricks_vertical_slab": "Jasper Brick Vertical Slab",
+	"block.quark.shale_bricks_vertical_slab": "Shale Brick Vertical Slab",
+	"block.quark.andesite_bricks_wall": "Andesite Brick Wall",
+	"block.quark.granite_bricks_wall": "Granite Brick Wall",
+	"block.quark.diorite_bricks_wall": "Diorite Brick Wall",
+	"block.quark.calcite_bricks_wall": "Calcite Brick Wall",
+	"block.quark.limestone_bricks_wall": "Limestone Brick Wall",
+	"block.quark.jasper_bricks_wall": "Jasper Brick Wall",
+	"block.quark.shale_bricks_wall": "Shale Brick Wall",
+	"block.quark.andesite_pillar": "Andesite Pillar",
+	"block.quark.granite_pillar": "Granite Pillar",
+	"block.quark.diorite_pillar": "Diorite Pillar",
+	"block.quark.calcite_pillar": "Calcite Pillar",
+	"block.quark.limestone_pillar": "Limestone Pillar",
+	"block.quark.jasper_pillar": "Jasper Pillar",
+	"block.quark.shale_pillar": "Shale Pillar",
 	"block.quark.monster_box": "Monster Box",
 	"block.quark.iron_chain": "Iron Chain",
 	"block.quark.blue_blossom_leaves": "Frosty Trumpet Leaves",
@@ -1092,13 +1092,13 @@
 	"block.quark.polished_myalite_stairs": "Polished Myalite Stairs",
 	"block.quark.polished_myalite_slab": "Polished Myalite Slab",
 	"block.quark.polished_myalite_vertical_slab": "Polished Myalite Vertical Slab",
-	"block.quark.myalite_bricks_wall": "Polished Myalite Brick Wall",
-	"block.quark.myalite_bricks_stairs": "Polished Myalite Brick Stairs",
-	"block.quark.myalite_bricks_slab": "Polished Myalite Brick Slab",
-	"block.quark.myalite_bricks_vertical_slab": "Polished Myalite Brick Vertical Slab",
-	"block.quark.myalite_bricks": "Polished Myalite Bricks",
-	"block.quark.chiseled_myalite_bricks": "Chiseled Polished Myalite Bricks",
-	"block.quark.myalite_pillar": "Polished Myalite Pillar",
+	"block.quark.myalite_bricks_wall": "Myalite Brick Wall",
+	"block.quark.myalite_bricks_stairs": "Myalite Brick Stairs",
+	"block.quark.myalite_bricks_slab": "Myalite Brick Slab",
+	"block.quark.myalite_bricks_vertical_slab": "Myalite Brick Vertical Slab",
+	"block.quark.myalite_bricks": "Myalite Bricks",
+	"block.quark.chiseled_myalite_bricks": "Chiseled Myalite Bricks",
+	"block.quark.myalite_pillar": "Myalite Pillar",
 	"block.quark.chorus_weeds": "Chorus Weeds",
 	"block.quark.chorus_twist": "Chorus Twist",
 	"block.quark.black_framed_glass": "Black Framed Glass",
@@ -1195,36 +1195,36 @@
 	"block.quark.exposed_cut_copper_vertical_slab": "Exposed Cut Copper Vertical Slab",
 	"block.quark.weathered_cut_copper_vertical_slab": "Weathered Cut Copper Vertical Slab",
 	"block.quark.oxidized_cut_copper_vertical_slab": "Oxidized Cut Copper Vertical Slab",
-	"block.quark.dripstone_pillar": "Polished Dripstone Pillar",
-	"block.quark.dripstone_bricks": "Polished Dripstone Bricks",
-	"block.quark.chiseled_dripstone_bricks": "Chiseled Polished Dripstone Bricks",
+	"block.quark.dripstone_pillar": "Dripstone Pillar",
+	"block.quark.dripstone_bricks": "Dripstone Bricks",
+	"block.quark.chiseled_dripstone_bricks": "Chiseled Dripstone Bricks",
 	"block.quark.polished_dripstone": "Polished Dripstone",
-	"block.quark.tuff_pillar": "Polished Tuff Pillar",
-	"block.quark.tuff_bricks": "Polished Tuff Bricks",
-	"block.quark.chiseled_tuff_bricks": "Chiseled Polished Tuff Bricks",
+	"block.quark.tuff_pillar": "Tuff Pillar",
+	"block.quark.tuff_bricks": "Tuff Bricks",
+	"block.quark.chiseled_tuff_bricks": "Chiseled Tuff Bricks",
 	"block.quark.polished_tuff": "Polished Tuff",
 	"block.quark.dripstone_block_stairs": "Dripstone Stairs",
 	"block.quark.polished_dripstone_stairs": "Polished Dripstone Stairs",
-	"block.quark.dripstone_bricks_stairs": "Polished Dripstone Brick Stairs",
+	"block.quark.dripstone_bricks_stairs": "Dripstone Brick Stairs",
 	"block.quark.tuff_stairs": "Tuff Stairs",
 	"block.quark.polished_tuff_stairs": "Polished Tuff Stairs",
-	"block.quark.tuff_bricks_stairs": "Polished Tuff Brick Stairs",
+	"block.quark.tuff_bricks_stairs": "Tuff Brick Stairs",
 	"block.quark.dripstone_block_slab": "Dripstone Slab",
 	"block.quark.polished_dripstone_slab": "Polished Dripstone Slab",
-	"block.quark.dripstone_bricks_slab": "Polished Dripstone Brick Slab",
+	"block.quark.dripstone_bricks_slab": "Dripstone Brick Slab",
 	"block.quark.tuff_slab": "Tuff Slab",
 	"block.quark.polished_tuff_slab": "Polished Tuff Slab",
-	"block.quark.tuff_bricks_slab": "Polished Tuff Brick Slab",
+	"block.quark.tuff_bricks_slab": "Tuff Brick Slab",
 	"block.quark.dripstone_block_vertical_slab": "Dripstone Vertical Slab",
 	"block.quark.polished_dripstone_vertical_slab": "Polished Dripstone Vertical Slab",
-	"block.quark.dripstone_bricks_vertical_slab": "Polished Dripstone Brick Vertical Slab",
+	"block.quark.dripstone_bricks_vertical_slab": "Dripstone Brick Vertical Slab",
 	"block.quark.tuff_vertical_slab": "Tuff Vertical Slab",
 	"block.quark.polished_tuff_vertical_slab": "Polished Tuff Vertical Slab",
-	"block.quark.tuff_bricks_vertical_slab": "Polished Tuff Brick Vertical Slab",
+	"block.quark.tuff_bricks_vertical_slab": "Tuff Brick Vertical Slab",
 	"block.quark.dripstone_block_wall": "Dripstone Wall",
-	"block.quark.dripstone_bricks_wall": "Polished Dripstone Brick Wall",
+	"block.quark.dripstone_bricks_wall": "Dripstone Brick Wall",
 	"block.quark.tuff_wall": "Tuff Wall",
-	"block.quark.tuff_bricks_wall": "Polished Tuff Brick Wall",
+	"block.quark.tuff_bricks_wall": "Tuff Brick Wall",
 	"block.quark.iron_pillar": "Iron Pillar",
 	"block.quark.deepslate_furnace": "Deepslate Furnace",
 	"block.quark.blackstone_furnace": "Blackstone Furnace",
