--- a/changelog.txt
+++ b/changelog.txt
@@ -1,47 +1,18 @@
-Alpha changelog for build 421
+Build 424 (beta)
 
-# Fixes
-
-- Fixed "Gold Tools Have Fortune" not making gold tools have fortune.
-- Fixed Backpack and Forgotten Hat not being equippable with right mouse button.
-- Fixed Corundum Lamps not being mineable.
-- Fixed Crate not having the chest interaction buttons.
-- Fixed double-clicking anywhere in a chest screen clearing the search bar.
-- Fixed dropped backpack with items spilled out still showing the lock icon.
-- Fixed Forgotten Hat having 2 identical reach indicators (one for each Forge reach attribute).
-- Fixed holding a bow in creative glitching out the Usage Ticker.
-- Fixed inability to put 1.20 seeds in the Seed Pouch.
-- Fixed Map tooltips not rendering.
-- Fixed Matrix Enchanting generating pieces you can't actually apply to the tool you're enchanting.
-- Fixed missing Hotbar Changer texture.
-- Fixed more cases of blocks being missing from creative tabs (and therefore JEI).
-- Fixed more cases of blocks not having their correct mining tool.
-- Fixed Multishot crossbows duplicating torch arrows.
-- Fixed our LivingDeath and ItemTooltip events not firing (had various effects).
-- Fixed pickarang damage sources.
-- Fixed pickarangs being able to break reinforced deepslate.
-- Fixed potion attributes not appearing on items.
-- Fixed Rune colors not being applied to armor worn on your player/an armor stand.
-- Fixed Shibas getting stuck trying to pick up arrows fired from an Infinity bow (...!)
-- Fixed sideways Stripped Cherry Posts having the Stripped Bamboo Post model due to a copy-paste error.
-- Fixed stacked Fence Gates not opening in tandem.
-- Fixed stonelings getting damaged by projectiles.
-- Fixed stronghold libraries having too many ancient tomes.
-- Fixed the Backpack screen not having the sort button.
-- Fixed the Feeding Trough not attracting Brain system mobs, like the Sniffer, Goat, Frog etc.
-- Fixed the q button being misplaced, and the "q button on right" option making it more misplaced.
-- Fixed Tiny Potato being equippable in any slot. Too OP.
-- Simplified SimpleHarvestModule code, fixing a crash with Farmer's Delight.
-- Tried to fix Permafrost replacing blocks other than overworld stones.
-
-## Performance
-
-- Tried to fix Permafrost worldgen performance. It'll generate in smaller blobs now too. It's still slow.
-
-## New
-
-- Chute can now drop items through Hollow Logs.
-- Dispensers can now shoot Torch Arrows.
-- Pitcher Plants can now be placed in Flower Pots.
-- Right clicking an Armor Stand with both hands empty while wearing a Backpack moves the Backpack to the Armor Stand. (even if there's items inside)
-- Tuff blocks now have 1.21 textures. (one was left out on purpose to maintain consistency)
+- Fix `mineable/pickaxe` tag being broken due to removal of the Crafter in the previous update.
+- Animals with big hitboxes can reach the Feeding Trough from farther away.
+- Feeding Trough should attract and feed animals a little more reliably. Every animal gets its own fakeplayer.
+- `needs_iron_tool` and `needs_stone_tool` tags have been added.
+- Fix thread-safety issue with JEI.
+- Fix the "Terrablender Add Region" option being... inverted!
+- Fix Nether Brick Fence Gate sounding like an overworld fence gate instead of a Nether fence gate.
+  - ZetaFenceGateBlock now exposes the relevant parameters. This change is backwards-compatible for addons.
+- Re-add Chest Searching by creative tab name.
+- Re-add Seed Pouch variants appearing in the Creative menu (and JEI).
+- Re-add Enchantments Begone hiding enchantments from Creative (and JEI).
+- Fix "right click to..." tooltips appearing on Creative infinite-copy slots.
+- Some code cleanups related to hedges, mini inventory buttons, and some other stuff.
+  - All changes should ( 🙏 🙏 ) be backwards-compatible for addons
+  - `ZCustomizeDebugText` is now deprecated.
+  - The old `ZStartClientTick`/`ZEndClientTick` events have been fully removed after their deprecation.
