--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -358,14 +358,14 @@
 	"quark.subtitles.crab_die": "Shell crunches",
 	"quark.subtitles.crab_hurt": "Shell chips",
 	"quark.subtitles.crab_scuttle": "Crab scuttles",
-	"quark.subtitles.toretoise_idle": "Toretoise chirps",
-	"quark.subtitles.toretoise_hurt": "Toretoise hurts",
-	"quark.subtitles.toretoise_die": "Toretoise crumbles",
-	"quark.subtitles.toretoise_angry": "Toretoise cracks",
-	"quark.subtitles.toretoise_eat_satiated": "Toretoise snacks",
-	"quark.subtitles.toretoise_eat": "Toretoise eats",
-	"quark.subtitles.toretoise_harvest": "Toretoise harvested",
-	"quark.subtitles.toretoise_regrow": "Toretoise regrows",
+	"quark.subtitles.toretoise_idle": "Oretoise chirps",
+	"quark.subtitles.toretoise_hurt": "Oretoise hurts",
+	"quark.subtitles.toretoise_die": "Oretoise crumbles",
+	"quark.subtitles.toretoise_angry": "Oretoise cracks",
+	"quark.subtitles.toretoise_eat_satiated": "Oretoise snacks",
+	"quark.subtitles.toretoise_eat": "Oretoise eats",
+	"quark.subtitles.toretoise_harvest": "Oretoise harvested",
+	"quark.subtitles.toretoise_regrow": "Oretoise regrows",
 	"quark.subtitles.parrot_egg": "Parrot plops",
 	"quark.subtitles.soul_bead.idle": "Soul bead emanates",
 	"quark.subtitles.growl": "Monsters arise",
@@ -1391,7 +1391,7 @@
 	"item.quark.stoneling_spawn_egg": "Stoneling Spawn Egg",
 	"item.quark.crab_spawn_egg": "Crab Spawn Egg",
 	"item.quark.foxhound_spawn_egg": "Foxhound Spawn Egg",
-	"item.quark.toretoise_spawn_egg": "Toretoise Spawn Egg",
+	"item.quark.toretoise_spawn_egg": "Oretoise Spawn Egg",
 	"item.quark.forgotten_spawn_egg": "Forgotten Spawn Egg",
 	"item.quark.wraith_spawn_egg": "Wraith Spawn Egg",
 	"item.quark.shiba_spawn_egg": "Shiba Spawn Egg",
@@ -1406,7 +1406,7 @@
 	"entity.quark.gravisand": "Floating Gravisand",
 	"entity.quark.crab": "Crab",
 	"entity.quark.foxhound": "Foxhound",
-	"entity.quark.toretoise": "Toretoise",
+	"entity.quark.toretoise": "Oretoise",
 	"entity.quark.forgotten": "Forgotten",
 	"entity.quark.wraith": "Wraith",
 	"entity.quark.soul_bead": "Soul Bead",
@@ -1521,9 +1521,9 @@
 	"advancements.quark.make_stoneling.title": "Young Dreamer",
 	"advancements.quark.make_stoneling.description": "Give a Stoneling a new body by using its Heart of Diamond on any stone",
 	"advancements.quark.mine_toretoise.title": "Mine Turtle!",
-	"advancements.quark.mine_toretoise.description": "Mine a wild Toretoise with a Pickaxe",
+	"advancements.quark.mine_toretoise.description": "Mine a wild Oretoise with a Pickaxe",
 	"advancements.quark.mine_fed_toretoise.title": "We're Rich!",
-	"advancements.quark.mine_fed_toretoise.description": "Mine a Toretoise after it regrows its ore from eating Glow Berries",
+	"advancements.quark.mine_fed_toretoise.description": "Mine an Oretoise after it regrows its ore from eating Glow Berries",
 	"advancements.quark.throw_pickarang.title": "Somehow, Pickarang Returned",
 	"advancements.quark.throw_pickarang.description": "Throw a Pickarang",
 	"advancements.quark.retreive_flamerang.title": "Fly to the Sky, Fire Bird",
